// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`create - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy, evaluate, fine-tune, and manage Foundry agents end-to-end: Docker build, ACR push, hosted/prompt agent create, container start, batch eval, continuous eval, prompt optimizer, agent.yaml, dataset curation from traces, model fine-tuning (SFT/DPO/RFT). USE FOR: deploy agent, hosted agent, create agent, invoke agent, evaluate agent, continuous eval, continuous monitoring, optimize prompt, improve prompt, prompt optimizer, optimize agent instructions, improve agent instructions, optimize system prompt, deploy model, Foundry project, RBAC, role assignment, permissions, quota, capacity, region, troubleshoot agent, deployment failure, Cognitive Services, create Foundry resource, provision, knowledge index, agent monitoring, customize deployment, onboard, availability, fine-tune, SFT, DPO, RFT, training data, grader, distillation, fine-tuned model, training job, large file upload. DO NOT USE FOR: Azure Functions, App Service, general Azure deploy (use azure-deploy), general Azure prep (use azure-prepare).",
  "extractedKeywords": [
    "agent",
    "agents",
    "assignment",
    "availability",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "batch",
    "build",
    "capacity",
    "cli",
    "cognitive",
    "container",
    "continuous",
    "create",
    "curation",
    "customize",
    "data",
    "dataset",
    "deploy",
    "deployment",
    "distillation",
    "docker",
    "end-to-end",
    "eval",
    "evaluate",
    "failure",
    "file",
    "fine-tune",
    "fine-tuned",
    "fine-tuning",
    "foundry",
    "from",
    "functions",
    "general",
    "grader",
    "hosted",
    "improve",
    "index",
    "instructions",
    "invoke",
    "knowledge",
    "large",
    "manage",
    "mcp",
    "microsoft",
    "model",
    "monitor",
    "monitoring",
    "onboard",
    "optimize",
    "optimizer",
    "permissions",
    "prep",
    "project",
    "prompt",
    "provision",
    "push",
    "quota",
    "rbac",
    "region",
    "resource",
    "role",
    "service",
    "services",
    "start",
    "system",
    "traces",
    "training",
    "troubleshoot",
    "upload",
    "validation",
    "vnet",
    "yaml",
  ],
  "name": "microsoft-foundry",
}
`;

exports[`create - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "assignment",
  "availability",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "batch",
  "build",
  "capacity",
  "cli",
  "cognitive",
  "container",
  "continuous",
  "create",
  "curation",
  "customize",
  "data",
  "dataset",
  "deploy",
  "deployment",
  "distillation",
  "docker",
  "end-to-end",
  "eval",
  "evaluate",
  "failure",
  "file",
  "fine-tune",
  "fine-tuned",
  "fine-tuning",
  "foundry",
  "from",
  "functions",
  "general",
  "grader",
  "hosted",
  "improve",
  "index",
  "instructions",
  "invoke",
  "knowledge",
  "large",
  "manage",
  "mcp",
  "microsoft",
  "model",
  "monitor",
  "monitoring",
  "onboard",
  "optimize",
  "optimizer",
  "permissions",
  "prep",
  "project",
  "prompt",
  "provision",
  "push",
  "quota",
  "rbac",
  "region",
  "resource",
  "role",
  "service",
  "services",
  "start",
  "system",
  "traces",
  "training",
  "troubleshoot",
  "upload",
  "validation",
  "vnet",
  "yaml",
]
`;
